# nonebot-plugin-wake-on-lan

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_wake_on_lan/: __init__.py  config.py
nonebot_plugin_wol/: __init__.py  data.py
